[package]
name = "arseeding-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "fs", "macros"] }
url = "2.2.2"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = { version = "1.0.68", features = ["preserve_order"] }
arloader = { git = "https://github.com/Dev43/arloader", branch = "feat/wasm" }
chrono = "0.4.22"
ethers = "0.13.0"
walletconnect = { git = "https://github.com/Dev43/walletconnect-rs", branch = "feat/ethberlin", features = [
    "web3",
    "qr",
] }
async-trait = "0.1.57"
